# V-Open

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  package.bat  vcpkg.json
Tracker_VideoProcessing/: main.py
shaders/: Background.frag  Background.vert  Grid.frag  Grid.vert  ModelRenderer.frag  ModelRenderer.vert  StickmanRenderer.frag  StickmanRenderer.vert
src/renderer/: Camera.cpp  Camera.h  LightingSystem.cpp  LightingSystem.h  ModelImporter.cpp  ModelImporter.h  ModelRenderer.cpp  ModelRenderer.h  StickmanRenderer.cpp  StickmanRenderer.h  StudioEnvironment.cpp  StudioEnvironment.h
src/rhi/: OpenGLContext.cpp  OpenGLContext.h  RHI.h  RHIFactory.cpp
src/tracking/: TrackingData.h  TrackingReceiver.cpp  TrackingReceiver.h
